[project]
name = "dlt-docs-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dlt",
    "docstring-parser>=0.11",
    "mypy>=1.18.2",
    "openai>=2.6.1",
    "pydoc-markdown>=4.8.2,<5",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.2",
]


[tool.hatch.build.targets.sdist]
include = [
    "docs_tools/**/*.py",
]

[tool.hatch.build.targets.wheel]
packages = ["docs_tools"]
include = [
    "docs_tools/**/*.py",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
lint-embedded-snippets = "docs_tools.snippets.lint_embedded_snippets:main"
fix-grammar = "docs_tools.grammar.fix_grammar_gpt:main"

[tool.uv.sources]
dlt = { path = "..", editable = true }
