[project]
name = "dlt-docs-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dlt",
    "docstring-parser>=0.11",
    "openai>=2.6.1",
    "pydoc-markdown>=4.8.2,<5",
    "python-dotenv>=1.2.1",
]


[tool.hatch.build.targets.sdist]
packages = ["docs_tools"]

[tool.hatch.build.targets.wheel]
packages = ["docs_tools"]

[project.entry-points."console_scripts"]
check-embedded-snippets = "docs_tools.check_embedded_snippets:main"

[tool.uv.sources]
dlt = { path = "../..", editable = true }
