[tool.poetry]
name = "dlt-example-plugin"
version = "0.1.0"
description = ""
authors = ["dave <shrps@posteo.net>"]
readme = "README.md"
packages = [
    { include = "dlt_example_plugin" },
]

[tool.poetry.plugins.dlt]
dlt-example-plugin = "dlt_example_plugin.plugin"

[tool.poetry.dependencies]
python = ">=3.9.1,<3.14"
dlt={"path"="../../../"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
